# cppgo-demo

./: BUILD.bazel  WORKSPACE
ast/: BUILD.bazel  ast.go  ast.pb.go  ast.proto  ast_test.go  functions.cc  functions.h
ast/testdata/: one_function.c
function_printer/: BUILD.bazel  main.go
