load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/hperl/cppgo-demo/function_printer",
    visibility = ["//visibility:private"],
    deps = ["//ast:go_default_library"],
)

go_binary(
    name = "function_printer",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
